--- a/app/views/layouts/_splash_nav.html.erb
+++ b/app/views/layouts/_splash_nav.html.erb
@@ -14,8 +14,23 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><%= current_user.username %></a></li>
-        <li><%= button_to("LOG OUT", session_url, method: :delete, class: "btn btn-default navbar-btn") %></li>
+        <% if logged_in? %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><%= current_user.username %></a></li>
+          <li><%= button_to("LOG OUT", session_url, method: :delete, class: "btn btn-default navbar-btn") %></li>
+        </ul>
+        <% else %>
+        <li>
+          <a class="" data-toggle="modal"  data-target="#new-user-modal">
+            SIGN UP
+          </a> <!-- Button trigger modal from body-->
+        </li>
+        <li>
+          <a class="" data-toggle="modal"  data-target="#login-modal">
+            LOGIN
+          </a> <!-- Button trigger modal from body-->
+        </li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
