--- a/app/assets/templates/users/new_user.jst.ejs
+++ b/app/assets/templates/users/new_user.jst.ejs
@@ -7,24 +7,27 @@
           class="new-user-img"
           src="assets/user/guest.jpg">
 
-        <input 
-          type="filepicker"
-          data-fp-mimetype="image/*" 
-          name="myName"
-          class="btn btn-default new-user-img-button"
-          data-fp-button-text="Select User Photo" >
+        <button
+          id="new-user-img-button"
+          class="btn btn-default">
+          Select User Photo
+        </button>
         </div>
       </div>
       <div class= "col-xs-7">
-        <div class="form-group">
-          <label for="new-user-username">Username</label>  
+        <div class="form-group" id="new-user-username-group">
+          <span class="help-block"></span>
+          <label 
+            class="control-label" 
+            for="new-user-username">Username</label>  
           <input
             class="form-control"
             id="new-user-username"
             type="text"
             name="user[username]"
             value="">
-
+        </div>
+        <div class="form-group">
           <label for="new-user-password">Password</label>
           <input
             class="form-control"
@@ -48,7 +51,8 @@
       type="button" 
       class="btn btn-default" 
       data-dismiss="modal">Close</button>
-    <input 
+    <input
+       id="new-user-submit"
       class="btn btn-primary"
       type="submit"
       value="Submit">
