--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,8 +25,17 @@ a, p, h1, h2, h3, h4, h5, h6, span {
 	color: #565a5c;
 }
 
+.problem-field input{
+  background-color: pink;
+}
+
 .price-color {
 	color: white;
+}
+
+.help-block {
+  height:16px;
+  width:100%;
 }
 
 .alert {
