--- a/app/assets/templates/users/new_user.jst.ejs
+++ b/app/assets/templates/users/new_user.jst.ejs
@@ -16,7 +16,7 @@
       </div>
       <div class= "col-xs-7">
         <div class="form-group" id="new-user-username-group">
-          <span class="help-block"></span>
+          <span class="help-block-username help-block"></span>
           <label 
             class="control-label" 
             for="new-user-username">Username</label>  
@@ -27,7 +27,8 @@
             name="user[username]"
             value="">
         </div>
-        <div class="form-group">
+        <div class="form-group" id="new-user-password-group">
+          <span class="help-block-password help-block"></span>
           <label for="new-user-password">Password</label>
           <input
             class="form-control"
