--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,7 +14,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><%= current_user.username %></a></li>
+        <li>
+          <a href="<%= "#/users/" + current_user.id.to_s %>">
+            <%= current_user.username %>
+          </a>
+        </li>
         <li><%= button_to("LOG OUT", session_url, method: :delete, class: "btn btn-default navbar-btn") %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
