--- a/app/assets/templates/search_sidebar.jst.ejs
+++ b/app/assets/templates/search_sidebar.jst.ejs
@@ -45,12 +45,12 @@
             </div>
             <div class="col-xs-4">
               <label>
-                <input class="checkbox-choice" type="checkbox" value="field"> Private Airfield
+                <input class="checkbox-choice" type="checkbox" value="field"> Private Launch Site
               </label>
             </div>
             <div class="col-xs-4">
               <label>
-                <input class="checkbox-choice" type="checkbox" value="pad"> Shared Airfield
+                <input class="checkbox-choice" type="checkbox" value="pad"> Shared Launch Site
               </label>
             </div>
           </div>
