--- a/app/assets/templates/users/new_user.jst.ejs
+++ b/app/assets/templates/users/new_user.jst.ejs
@@ -8,7 +8,7 @@
           src="assets/user/guest.jpg">
 
         <button
-          id="new-user-img-button"
+          id="new-img-button"
           class="btn btn-default">
           Select User Photo
         </button>
