--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,6 +19,7 @@
             <%= current_user.username %>
           </a>
         </li>
+        <li><%= link_to("LIST SPACEPORT", "#/spaceports/new") %></li>
         <li><%= button_to("LOG OUT", session_url, method: :delete, class: "btn btn-default navbar-btn") %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
