--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -127,7 +127,6 @@ ul {
 }
 
 
-
 .centered-text {
 	text-align: center;
 }
@@ -157,8 +156,14 @@ div.body-wrapper {
 }
 
 .spaceport-new-wrapper {
-  width:1045px;
+  width:450px;
   margin: 80px auto;
+}
+
+.new-spaceport-form-wrapper {
+  background-color: #f5f5f5;
+  border: 1px rgb(220, 224, 224) solid;
+  padding: 0 30px 40px 30px;
 }
 
 .new-spaceport-img-wrapper {
@@ -170,8 +175,10 @@ div.body-wrapper {
 }
 
 .new-spaceport-map-frame {
-  height: 400px;
-  cursor: crosshair; 
+  width: 100%;
+  height: 300px;
+  margin-bottom: 30px;
+  border: 1px rgb(220, 224, 224) solid;
 }
 
 #new-spaceport-submit {
