--- a/app/assets/templates/spaceports/brief_spaceport.jst.ejs
+++ b/app/assets/templates/spaceports/brief_spaceport.jst.ejs
@@ -1,28 +1,25 @@
-<a href="<%= '#/spaceports/' + spaceport.get('id') %>">
-	<div class="brief-img-wrapper col-xs-12">
-	  <div class="brief-price-frame">
-	    <span class="brief-dollar price-color"><strong>$</strong></span>
-	    <h3 class="brief-price price-color"><%= spaceport.escape('price') %></h3>
-	  </div>
-	  <div id="dummy-x"></div>
-	  <div id="element-x">
-	    <img src="<%= spaceport.photos().at(0).escape('url') %>" class="brief-img">
-	  </div>
-	</div>
 
-	<div class="brief-text-wrapper col-xs-12">
-	  <h4><%= spaceport.escape('name') %></h4>
-	  <ul>
-	    <li><%= spaceport.styleStr() %></li>
-	    <li><%= spaceport.escape('address') %></li>
-	    <li></li>
-	  </ul>
-	</div>
-</a>
+<div class="brief-img-wrapper col-xs-12">
+  <div class="brief-price-frame">
+    <span class="brief-dollar price-color"><strong>$</strong></span>
+    <h3 class="brief-price price-color"><%= spaceport.escape('price') %></h3>
+  </div>
+  <div id="dummy-x"></div>
+  <div id="element-x">
+    <img src="<%= spaceport.photos().at(0).escape('url') %>" class="brief-img">
+  </div>
+</div>
 
-<div 
-	class="brief-user-img-frame"
-	onclick="location.href=' <%= "#/users/" + spaceport.user().escape('id') %>';">
+<div class="brief-text-wrapper col-xs-12">
+  <h4><%= spaceport.escape('name') %></h4>
+  <ul>
+    <li><%= spaceport.styleStr() %></li>
+    <li><%= spaceport.escape('address') %></li>
+    <li></li>
+  </ul>
+</div>
+
+<div class="brief-user-img-frame">
   <img src="<%= spaceport.userPhoto().escape('url') %>" class="brief-user-img">
 </div>
 
