Build splash, tidy css, fix form reactions, guest login, general fixes

--- a/app/assets/templates/spaceports/brief_spaceport.jst.ejs
+++ b/app/assets/templates/spaceports/brief_spaceport.jst.ejs
@@ -10,16 +10,20 @@
   </div>
 </div>
 
+
+<div class="brief-title-wrapper col-xs-12">
+    <h4 class="brief-title"><%= spaceport.escape('name') %></h4>
+    <div class="brief-user-img-frame">
+      <img 
+        src="<%= spaceport.userPhoto().escape('url') %>" 
+        class="brief-user-img">
+    </div>
+</div>
 <div class="brief-text-wrapper col-xs-12">
-  <h4><%= spaceport.escape('name') %></h4>
-  <ul>
-    <li><%= spaceport.styleStr() %></li>
-    <li><%= spaceport.escape('address') %></li>
-    <li></li>
-  </ul>
+    <h5 class="brief-text">
+      <%= spaceport.styleStr() + " • " + spaceport.escape('address') %>
+    </h5>
 </div>
 
-<div class="brief-user-img-frame">
-  <img src="<%= spaceport.userPhoto().escape('url') %>" class="brief-user-img">
-</div>
+
 
