--- a/app/assets/templates/spaceports/show_spaceport.jst.ejs
+++ b/app/assets/templates/spaceports/show_spaceport.jst.ejs
@@ -147,7 +147,7 @@
         <div class="description-wrapper">
           <p><%= spaceport.escape("description") %></p>
         </div>
-        <h3 class="centered-text">Comments</h3>
+        <h3 class="centered-text">Spaceport Reviews</h3>
         <div class="description-wrapper">
           <div class="comments"></div>
 
@@ -157,7 +157,7 @@
                 <textarea 
                   id="spaceport-comment-field"
                   class="form-control"
-                  placeholder="Add Comment" 
+                  placeholder="Add Review" 
                   rows="3"></textarea>
               </div>
               <div class="col-xs-2">
