--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,76 @@ a, p, h1, h2, h3, h4, h5, h6, span {
 	color: #565a5c;
 }
 
+#splash-navbar .navbar-btn {
+  margin-right: 20px;
+}
+
+.splash-panel {
+  color:white;
+  position:absolute;
+  width: 100%;
+  height: 300px;
+  top:15%;
+//  background-color: rgba(0,0,0, 0.3);
+//  border: 1px black solid ;
+  border-radius: 2px;
+}
+
+#splash-title {
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  font-size: 8em;
+  font-style: normal;
+  font-variant: normal;
+  color: rgba(255,255,255, 0.9);
+}
+
+.splash-button-wrapper {
+  margin: auto;
+}
+
+#splash-button {
+  position: relative;
+  display: inline-block;
+  left:50%;
+  margin-left: -145px;
+  margin-top: 15px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  font-size: 3em;
+  border:none;
+  width:290px;
+  background-color: #ff7e82;
+  color: white;
+}
+
+.splash-body-wrapper {
+  position:absolute;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  overflow: hidden;
+  min-width: 1069;
+}
+
+.body-wrapper {
+
+}
+
+#splash-image {
+  width:100%;
+}
+
+#splash-navbar {
+  background-color: rgba(0,0,0, 0.3);
+  border-bottom:1px black solid ;
+}
+
+#splash-navbar a{
+  color: white;
+}
+
 .problem-field input{
   background-color: pink;
 }
@@ -47,18 +117,11 @@ span.form-control {
 }
 
 .alert {
-  position: absolute;
+  display: inline-block;
+  text-align: center;
+  position: relative;
   z-index: 2;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  top: 50px;
-}
-
-.fade-out {
-  opacity: 0;
-  transition: opacity 2s ease-in;
+  width:100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -285,10 +348,13 @@ div.body-wrapper {
 
 .brief {
   cursor: pointer;
+  padding: 6px;
 }
 
-div.briefs div.brief {
-  padding: 6px;
+.search-briefs-wrapper{
+  background-color: #f5f5f5;
+  border: 1px rgb(220, 224, 224) solid;
+  padding: 20px;
 }
 
 .brief-price-frame {
@@ -303,7 +369,7 @@ div.briefs div.brief {
 
 .navbar-default {
 	border: none;
-	border-bottom: 1px solid lightgrey;
+	border-bottom: 1px solid rgb(220, 224, 224);
 	border-radius: 0;
 	margin-bottom: 0;
   background-color: white;
@@ -340,11 +406,12 @@ div.briefs div.brief {
 
 .brief-user-img-frame{
   z-index: 1;
+  display: inline-block;
   position: relative; 
   overflow: hidden;
   float: right;
-  bottom: 80px;
-  right: 15px;
+  bottom: 70px;
+  right: 0px;
   width: 60px;
   height: 60px;
   border-radius:30px;
@@ -352,9 +419,26 @@ div.briefs div.brief {
 	cursor: pointer;
 }
 
+.brief-title-wrapper {
+  height: 25px;
+}
+
+.brief-title {
+  padding-right: 50px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.brief-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #888;
+}
+
 .brief-text-wrapper {
-  height: 50px;
-  padding-right: 75px;
+
 }
 
 .logo {
@@ -369,27 +453,43 @@ div.briefs div.brief {
 .search-sidebar {
   margin-top: 50px;
   margin-left: 40%;
-	padding: 20px 15px 0 15px;
+	padding: 0px;
 }
+
+.search-row {
+  margin: 0 6px;
+  padding: 20px 0;
+  border-top: 1px solid rgb(220, 224, 224);
+}
+.search-row div.col-xs-3, .search-row div.col-xs-8 {
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
+}
+
+.search-row p {
+  margin: 0;
+}
+
 .search-map-frame {
   width: 40%;
   position: fixed;
 }
 
+.search-filters-wrapper {
+  padding: 0 20px;
+}
+
 
 .search-map {
-  background-color: lightblue;
-
   height: 100vh;
-
 }
 
 .slider-data {
-  width: 40px;
+  width: 55px;
 }
 
 #price-upper {
-  width: 40px;
   float: right;
 }
 
