--- a/app/assets/templates/search_sidebar.jst.ejs
+++ b/app/assets/templates/search_sidebar.jst.ejs
@@ -1,72 +1,79 @@
 <div class="search-sidebar">
-  <form>
-    <div class="row">
-      <div class="col-xs-3">
-        Dates
+  <div class="search-filters-wrapper">
+    <form>
+      <div class="row search-row">
+        <div class="col-xs-3">
+          <p>Dates<p>
+        </div>
+          <div class="col-xs-8">
+            <div class="row">
+            <div class="col-xs-4">
+              <input type='text'
+                name="space[checkIn]"
+                class="form-control datetimepicker"
+                placeholder="Check In" 
+                id='datetimepickerStart'>
+            </div>
+            <div class="col-xs-4">
+              <input 
+                name="space[checkOut]"
+                type='text' 
+                class="form-control datetimepicker"
+                placeholder="Check Out"  
+                id='datetimepickerEnd'>
+            </div>
+            <div class="col-xs-4">
+              <input
+                id="staff-input"
+                type="number"
+                class="form-control"
+                max="1000"
+                min="0"
+                onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                placeholder="Staff size">
+            </div>
+          </div>
+        </div>
       </div>
+      <div class="row search-row">
+        <div class="col-xs-3">
+          <p>Rental Type<p>
+        </div>
         <div class="col-xs-8">
           <div class="row">
-          <div class="col-xs-4">
-            <input type='text'
-              name="space[checkIn]"
-              class="form-control datetimepicker"
-              placeholder="Check In" 
-              id='datetimepickerStart'>
-          </div>
-          <div class="col-xs-4">
-            <input 
-              name="space[checkOut]"
-              type='text' 
-              class="form-control datetimepicker"
-              placeholder="Check Out"  
-              id='datetimepickerEnd'>
-          </div>
-          <div class="col-xs-4">
-            <input
-              type="number"
-              class="form-control"
-              onkeypress="return event.charCode >= 48 && event.charCode <= 57"
-              placeholder="Staff size">
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">
-        Dates
-      </div>
-      <div class="col-xs-8">
-        <div class="row">
-          <div class="checkbox" name="space[style]">
-            <div class="col-xs-4">
-              <label>
-                <input class="checkbox-choice" type="checkbox" value="spaceport"> Entire Spaceport
-              </label>
-            </div>
-            <div class="col-xs-4">
-              <label>
-                <input class="checkbox-choice" type="checkbox" value="field"> Private Launch Site
-              </label>
-            </div>
-            <div class="col-xs-4">
-              <label>
-                <input class="checkbox-choice" type="checkbox" value="pad"> Shared Launch Site
-              </label>
+            <div class="checkbox" name="space[style]">
+              <div class="col-xs-4">
+                <label>
+                  <input class="checkbox-choice" type="checkbox" value="spaceport"> Entire Spaceport
+                </label>
+              </div>
+              <div class="col-xs-4">
+                <label>
+                  <input class="checkbox-choice" type="checkbox" value="field"> Private Launch Site
+                </label>
+              </div>
+              <div class="col-xs-4">
+                <label>
+                  <input class="checkbox-choice" type="checkbox" value="pad"> Shared Launch Site
+                </label>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">
-        <label for="price-slider">Price Range</label>
+      <div class="row search-row">
+        <div class="col-xs-3">
+          <p>Price Range<p>
+        </div>
+        <div class="col-xs-8">
+          <div id="price-slider" name="space[priceRange]"></div>
+          <input id="price-lower" class=slider-data >
+          <input id="price-upper" class=slider-data >
+        </div>
       </div>
-      <div class="col-xs-8">
-        <div id="price-slider" name="space[priceRange]"></div>
-        <input id="price-lower" class=slider-data >
-        <input id="price-upper" class=slider-data >
-      </div>
-    </div>
-  </form>
-  <div class="briefs"></div>
+    </form>
+  </div>
+  <div class="search-briefs-wrapper">
+    <div class="briefs clearfix"></div>
+  </div>
 </div>
