--- a/app/assets/templates/users/new_user.jst.ejs
+++ b/app/assets/templates/users/new_user.jst.ejs
@@ -27,9 +27,8 @@
             name="user[username]"
             value="">
         </div>
-        <div class="form-group has-error" id="new-user-password-group">
+        <div class="form-group" id="new-user-password-group">
           <span class="help-block-password help-block">
-            Password must be at least 6 characters
           </span>
           <label for="new-user-password">Password</label>
           <input
