--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,6 +9,13 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="<%= root_url %>"><%= image_tag("starbnb-logo.png", class:  "logo") %></a>
+      <ul class="nav navbar-nav navbar-left">
+        <li>
+          <a href="/index">
+            Search Listings
+          </a> 
+        </li>
+      </ul>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,9 +26,19 @@
             <%= current_user.username %>
           </a>
         </li>
-        <li><%= link_to("LIST SPACEPORT", "#/spaceports/new") %></li>
+        <li><%= link_to("List Spaceport", "#/spaceports/new") %></li>
         <li><%= button_to("LOG OUT", session_url, method: :delete, class: "btn btn-default navbar-btn") %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+  <% if flash["errors"] %>
+    <% flash["errors"].each do |msg| %>
+    <div class="alert alert-warning"><%= msg %></div>
+    <% end %>
+  <% end %>
+  <% if flash["successes"] %>
+    <% flash["successes"].each do |msg| %>
+      <div class="alert alert-success"><%= msg %></div>
+    <% end %>
+  <% end %>
 </nav>
