--- a/app/views/layouts/_splash_nav.html.erb
+++ b/app/views/layouts/_splash_nav.html.erb
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-default navbar-standard-mix"  role="navigation">
+<nav 
+  class="navbar navbar-default navbar-fixed-top"
+  id="splash-navbar"
+  role="navigation">
   <div class="container-fluid navbar-container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,7 +11,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<%= root_url %>"><%= image_tag("starbnb-logo.png", class:  "logo") %></a>
+      <a class="navbar-brand" href="<%= root_url %>"><%= image_tag("starbnb-splash-logo.png", class:  "logo") %></a>
+      <% if logged_in? %>
+      <ul class="nav navbar-nav navbar-left">
+        <li>
+          <a href="/index">
+            Search Listings
+          </a> 
+        </li>
+      </ul>
+      <% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -16,7 +28,12 @@
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><%= current_user.username %></a></li>
+          <li>
+            <a 
+            href='<%= "index#users/" + current_user.id.to_s %>'>
+              <%= current_user.username %>
+            </a>
+          </li>
           <li><%= button_to("LOG OUT", session_url, method: :delete, class: "btn btn-default navbar-btn") %></li>
         </ul>
         <% else %>
@@ -34,4 +51,16 @@
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+  <% if flash["errors"] %>
+    <% flash["errors"].each do |msg| %>
+    <div class="alert alert-warning"><%= msg %></div>
+    <% end %>
+  <% end %>
+  <% if flash["successes"] %>
+    <% flash["successes"].each do |msg| %>
+      <div class="alert alert-success"><%= msg %></div>
+    <% end %>
+  <% end %>
 </nav>
+
+  
