--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -95,7 +95,7 @@ a, p, h1, h2, h3, h4, h5, h6, span {
   color: white;
 }
 
-.problem-field input{
+.problem-field input, input.problem-field{
   background-color: pink;
 }
 
@@ -233,6 +233,10 @@ ul {
 	border: none;
 	margin-top: 30px;
 	border-radius: 2px;
+}
+
+.book-button.pressed {
+	background-color: #3FB8AF;
 }
 
 div.date-col {
