--- a/app/assets/templates/spaceports/show_spaceport.jst.ejs
+++ b/app/assets/templates/spaceports/show_spaceport.jst.ejs
@@ -90,7 +90,7 @@
 							</div>
 							<div class="col-xs-12">
 								<div class="row">
-									<div class="col-xs-9">
+									<div class="col-xs-8">
 										<div class="row">
 											<div class="col-xs-6">
 												<p>Check In</p>
@@ -114,13 +114,19 @@
 												id='datetimepickerEnd'>
 											</div>
 										</div> <!-- row #4.1 -->
-									</div> <!-- col-xs-9 -->
-									<div class="col-xs-3">
+									</div> <!-- col-xs-8 -->
+									<div class="col-xs-4">
 										<p>Staff</p>
 										<input
-											type="text"
-											class="form-control"
-											placeholder="0 - <%= spaceport.escape("staff") %>"
+                      type="number"
+                      id="request-staff-field"
+                      class="form-control"
+                      max='<%= spaceport.escape("staff") %>'
+                      min="1"
+
+                      name="spaceport[price]"
+                      onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+											placeholder="<%= '0-' + spaceport.escape("staff") %>"
 											>
 									</div> <!-- col-xs-4 -->
 								</div> <!-- row #3.2 -->
@@ -128,7 +134,7 @@
 							
 							<div class="col-xs-12">
 								<button
-								class="book-button">
+								class="book-button unpressed">
 									Book Now
 								</button>
 							</div> <!-- col-xs-12 -->
